# zero2prod

./: .gitignore  Cargo.toml  DigitalOceanSpec.yaml  Dockerfile  configuration.toml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
config/: base.toml  production.toml
migrations/: 20220901225021_create_subscriptions_table.sql  20221020142009_make_status_not_null_in_subscriptions.sql  20221020142354_create_subscriptions_token_table.sql  20221222210512_create_users_table.sql
scripts/: init_db.sh
src/: application.rs  authentication.rs  configuration.rs  db.rs  domain.rs  email_client.rs  lib.rs  main.rs  settings.rs  startup.rs  stuff.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: get.rs  login.html  post.rs
src/views/: layout.rs  login.rs  mod.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs  test_app.rs  test_user.rs
