[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Steve Godin <steve.god@gmail.com>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.66"
argon2 = { version = "0.4.1", features = ["std"] }
base64 = "0.20.0"
chrono = "0.4.22"
config = "0.13.2"
maud = { version = "0.24.0", features = ["actix-web"] }
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"], default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde-aux = "4.0.0"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "macros", "offline", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1.0.37"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-actix-web = "0.6.1"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.0"
uuid = { version = "1.1.2", features = ["v4", "v7"] }
validator = "0.16.0"

[dev-dependencies]
claims = "0.7.1"
fake = "~2.3.0"
linkify = "0.9.0"
once_cell = "1.15.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.8.5"
serde_json = "1.0.86"
tokio = { version = "1.20.1", features = ["rt", "macros"] }
wiremock = "0.5.15"
